# WaveBits

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md
Test/: CMakeLists.txt
Test/api/: api_tests.cpp
Test/artifact/: artifact_tests.cpp
Test/cli/: cli_smoke_tests.cpp
Test/include/: test_audio_io.h  test_cli_version_generated.h.in  test_framework.h  test_fs.h  test_std_support.h  test_utf8.h  test_vectors.h
Test/modules/: end_to_end_module_smoke.cpp  facade_pipeline_smoke.cpp  facade_pipeline_smoke_pipeline.cpp  facade_pipeline_smoke_support.cpp  facade_pipeline_smoke_support.h  facade_pipeline_smoke_transport.cpp  foundation_module_smoke.cpp  leaf_module_smoke.cpp  leaf_module_smoke_audio_io.cpp  leaf_module_smoke_flash.cpp  leaf_module_smoke_support.cpp  leaf_module_smoke_support.h  leaf_module_smoke_transport.cpp  mid_layer_module_smoke.cpp  phase0_smoke.cpp  phase10_internal_cutover.cpp  phase2_leaf_smoke.cpp  phase3_mid_layer_smoke.cpp  phase4_facade_pipeline_smoke.cpp
Test/unit/: unit_tests.cpp
Test/voicing/: flash_voicing_formal_tests.cpp  flash_voicing_payload_tests.cpp  flash_voicing_shell_tests.cpp  flash_voicing_test_support.cpp  flash_voicing_test_support.h  flash_voicing_tests.cpp
apps/audio_android/app/src/main/cpp/: CMakeLists.txt  audio_io_jni.cpp  audio_io_jni_arrays_impl.inc  audio_io_jni_dto_marshalling_impl.inc  audio_io_jni_entrypoints_impl.inc  audio_io_jni_enum_lookup_impl.inc  audio_io_jni_strings_impl.inc  (+5 more)
apps/audio_android/modules_smoke/: CMakeLists.txt  android_modules_smoke.cpp
apps/audio_android/native_package/: CMakeLists.txt
apps/audio_android/native_package/private_include/android_audio_io/: audio_io_package.h
apps/audio_android/native_package/src/: CMakeLists.txt  audio_core_common_version.cpp  audio_core_flash_codec.cpp  audio_core_flash_phy_clean.cpp  audio_core_pro_codec.cpp  audio_core_pro_phy_clean.cpp  audio_core_transport_transport.cpp  audio_core_ultra_codec.cpp  audio_core_ultra_phy_clean.cpp  audio_io_backend_android.cpp  audio_io_package.cpp  bag_api_package.cpp
apps/audio_cli/rust/: Cargo.toml  build.rs
apps/audio_cli/rust/cmake/: CMakeLists.txt
apps/audio_cli/rust/src/: audio_io_api.rs  bag_api.rs  cli.rs  commands.rs  error.rs  fs_io.rs  lib.rs  main.rs  tests.rs  util.rs
apps/audio_cli/rust/tests/: cli.rs
libs/audio_api/: CMakeLists.txt
libs/audio_api/include/: bag_api.h
libs/audio_api/src/: bag_api.cpp  bag_api_config_mapping_impl.inc  bag_api_decode_entrypoints_impl.inc  bag_api_encode_entrypoints_impl.inc  bag_api_encode_job_entrypoints_impl.inc  bag_api_encode_job_support_impl.inc  bag_api_encode_result_copy_impl.inc  bag_api_encode_sync_entrypoints_impl.inc  bag_api_error_mapping_impl.inc  bag_api_flash_signal_info_impl.inc  bag_api_follow_marshalling_impl.inc  bag_api_impl.inc  bag_api_internal_decls_impl.inc  bag_api_job_progress_impl.inc  bag_api_message_entrypoints_impl.inc  bag_api_mode_validation_entrypoints_impl.inc  bag_api_object_defs_impl.inc  bag_api_raw_format_impl.inc  bag_api_result_lifecycle_impl.inc  bag_api_result_marshalling_impl.inc
libs/audio_api/tests/: api_async_tests.cpp  api_flash_tests.cpp  api_sync_tests.cpp  api_test_support.cpp  api_test_support.h  api_tests.cpp
libs/audio_core/: CMakeLists.txt
libs/audio_core/include/bag/common/: config.h  types.h  version_generated.h.in
libs/audio_core/include/bag/flash/: codec.h  phy_clean.h
libs/audio_core/include/bag/link/: link_layer.h
libs/audio_core/include/bag/pro/: codec.h  frame_codec.h  phy_clean.h  phy_compat.h  text_codec.h
libs/audio_core/include/bag/transport/: transport.h
libs/audio_core/include/bag/ultra/: codec.h  phy_clean.h  phy_compat.h
libs/audio_core/modules/bag/common/: config.cppm  error_code.cppm  types.cppm  version.cppm
libs/audio_core/modules/bag/flash/: codec.cppm  phy_clean.cppm  signal.cppm  voicing.cppm
libs/audio_core/modules/bag/fsk/: codec.cppm
libs/audio_core/modules/bag/pipeline/: pipeline.cppm
libs/audio_core/modules/bag/pro/: codec.cppm  phy_clean.cppm  phy_compat.cppm
libs/audio_core/modules/bag/transport/: decoder.cppm  facade.cppm
libs/audio_core/modules/bag/ultra/: codec.cppm  phy_clean.cppm  phy_compat.cppm
libs/audio_core/src/common/: version.clang.cpp  version.cpp  version_impl.inc
libs/audio_core/src/flash/: codec.clang.cpp  codec.cpp  codec_impl.inc  phy_clean.clang.cpp  phy_clean.cpp  phy_clean_impl.inc  signal_impl.inc  voicing_impl.inc  voicing_internal_shell.inc  voicing_internal_support.inc  voicing_internal_texture.inc
libs/audio_core/src/fsk/: fsk_codec.clang.cpp  fsk_codec.cpp
libs/audio_core/src/pipeline/: pipeline.clang.cpp  pipeline.cpp
libs/audio_core/src/pro/: codec.clang.cpp  codec.cpp  codec_impl.inc  frame_codec.cpp  phy_clean.clang.cpp  phy_clean.cpp  phy_clean_impl.inc  phy_compat.clang.cpp  phy_compat.cpp  text_codec.cpp
libs/audio_core/src/transport/: follow_entrypoints_impl.inc  follow_impl.inc  follow_lyric_lines_impl.inc  follow_payload_timeline_impl.inc  follow_tokenization_impl.inc  transport.clang.cpp  transport.cpp  transport_impl.inc
libs/audio_core/src/transport/compat/: frame_codec.clang.cpp  frame_codec.cpp
libs/audio_core/src/ultra/: codec.clang.cpp  codec.cpp  codec_impl.inc  phy_clean.clang.cpp  phy_clean.cpp  phy_clean_impl.inc  phy_compat.clang.cpp  phy_compat.cpp
libs/audio_io/: CMakeLists.txt
libs/audio_io/include/: audio_io_api.h  wav_io.h
libs/audio_io/modules/audio_io/: wav.cppm  wav_impl.cpp
libs/audio_io/src/: audio_io_api.cpp  audio_io_api_entrypoints_impl.inc  audio_io_api_free_impl.inc  audio_io_api_lifecycle_impl.inc  audio_io_api_metadata_marshalling_impl.inc  audio_io_api_status_mapping_impl.inc  audio_io_api_status_messages_impl.inc  wav_io.cpp  wav_io_backend.cpp  wav_io_backend.h  wav_io_bytes_impl.inc  wav_io_detail.h  wav_io_shared.h
libs/audio_io/tests/: unit_tests.cpp
libs/audio_runtime/: CMakeLists.txt
libs/audio_runtime/include/: audio_runtime.h
libs/audio_runtime/src/: audio_runtime_impl.inc
libs/audio_runtime/tests/: runtime_tests.cpp
(+961 files in other folders)
