[package]
name = "flipbits"
# CLI presentation version; libs/core version is defined by the root CMake config.
version = "0.2.4"
edition = "2021"

[[bin]]
name = "FlipBits"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
